--- a/appstate.json
+++ b/appstate.json
@@ -1,1 +1,101 @@
-
+[
+	{
+		"key": "dbln",
+		"value": "%7B%2261561654365317%22%3A%22IScUXQsE%22%7D",
+		"domain": "facebook.com",
+		"path": "/login/device-based/",
+		"hostOnly": false,
+		"creation": "2024-10-21T00:22:14.649Z",
+		"lastAccessed": "2024-10-21T00:22:14.656Z"
+	},
+	{
+		"key": "datr",
+		"value": "gpcVZ3OqbHWu3fEPiMQPFYuO",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2024-10-21T00:22:14.656Z",
+		"lastAccessed": "2024-10-21T00:22:14.656Z"
+	},
+	{
+		"key": "sb",
+		"value": "gpcVZ5Tu1rwpWYkQCSclFR2V",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2024-10-21T00:22:14.656Z",
+		"lastAccessed": "2024-10-21T00:22:14.656Z"
+	},
+	{
+		"key": "wd",
+		"value": "423x800",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2024-10-21T00:22:14.656Z",
+		"lastAccessed": "2024-10-21T00:22:14.656Z"
+	},
+	{
+		"key": "c_user",
+		"value": "61561654365317",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2024-10-21T00:22:14.656Z",
+		"lastAccessed": "2024-10-21T00:22:14.656Z"
+	},
+	{
+		"key": "fr",
+		"value": "0l42c7fIHDsHWWV7z.AWUGVyig609by9OMINyz8LDUGoI.BnFZeC..AAA.0.0.BnFZiK.AWUam42XMqA",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2024-10-21T00:22:14.656Z",
+		"lastAccessed": "2024-10-21T00:22:14.656Z"
+	},
+	{
+		"key": "xs",
+		"value": "3%3AJw4-PI6CF-3sWg%3A2%3A1729468558%3A-1%3A7855",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2024-10-21T00:22:14.656Z",
+		"lastAccessed": "2024-10-21T00:22:14.656Z"
+	},
+	{
+		"key": "locale",
+		"value": "en_US",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2024-10-21T00:22:14.656Z",
+		"lastAccessed": "2024-10-21T00:22:14.656Z"
+	},
+	{
+		"key": "vpd",
+		"value": "v1%3B680x360x1.7004296779632568",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2024-10-21T00:22:14.656Z",
+		"lastAccessed": "2024-10-21T00:22:14.656Z"
+	},
+	{
+		"key": "wl_cbv",
+		"value": "v2%3Bclient_version%3A2650%3Btimestamp%3A1729469330",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2024-10-21T00:22:14.656Z",
+		"lastAccessed": "2024-10-21T00:22:14.656Z"
+	},
+	{
+		"key": "fbl_st",
+		"value": "101526862%3BT%3A28824487",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2024-10-21T00:22:14.656Z",
+		"lastAccessed": "2024-10-21T00:22:14.656Z"
+	}
+]
